--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build"
-    
   },
   "dependencies": {
-    "canvas-confetti": "^1.2.0"
+    "canvas-confetti": "^1.2.0",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@snowpack/plugin-typescript": "^1.2.1",
